# core/entities/banners/advertisement.entity.ts
@@ -1,0 +1,28 @@
+import { Column, Entity, Generated, PrimaryColumn, PrimaryGeneratedColumn } from 'typeorm';
+import { Min, Max, IsNotEmpty } from 'class-validator';
+
+@Entity()
+export class Advertisement {
+  @PrimaryGeneratedColumn()
+  id: string;
+
+  @IsNotEmpty()
+  @Column({ unique: true })
+  image: string;
+
+  @IsNotEmpty()
+  @Column()
+  description: string;
+
+  @IsNotEmpty()
+  @Column()
+  link: string;
+
+  constructor(args?: { image: string, description: string, link: string }) {
+    if (args) {
+      this.image = args.image;
+      this.description = args.description;
+      this.link = args.link;
+    }
+  }
+}
