# core/entities/index.ts
@@ -1,6 +1,7 @@
 export { User } from "./users/user.entity";
 export { Image } from './images/image.entity';
 export { Review } from './reviews/review.entity';
+export { Slide, Advertisement } from './banners/';
 export { Wishlist } from './wishlists/wishlist.entity';
 export { Basket, OrderProduct, PaymentCard, Address, Checkout } from './orders'
 export { Brand, Category, Color, Product, Parameter, Tag } from './catalog'
